added ../ link path for 404page and blog pages

--- a/404.html
+++ b/404.html
@@ -19,19 +19,19 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/vendor.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/vendor.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <!-- script
     ================================================== -->
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
+    <script src="../js/modernizr.js"></script>
+    <script src="../js/pace.min.js"></script>
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
 
     <!-- Google Analytics
     ================================================== -->
@@ -52,8 +52,8 @@
     ================================================== -->
     <header class="s-header">
       <div class="header-logo">
-        <a class="site-logo" href="/index.html"
-          ><img src="images/logo.png" alt="Homepage"
+        <a class="site-logo" href="../index.html"
+          ><img src="../images/logo.png" alt="Homepage"
         /></a>
       </div>
 
@@ -80,7 +80,7 @@
       id="home"
       class="s-home page-hero target-section"
       data-parallax="scroll"
-      data-image-src="images/DSC8983.jpg"
+      data-image-src="../images/DSC8983.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
@@ -111,7 +111,7 @@
         <div class="col-full">
           <div class="footer-logo">
             <a class="footer-site-logo" href="#0"
-              ><img src="images/logo.png" alt="Homepage"
+              ><img src="../images/logo.png" alt="Homepage"
             /></a>
           </div>
 
@@ -161,8 +161,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
