path link ../ added

--- a/404.html
+++ b/404.html
@@ -19,19 +19,19 @@
 
     <!-- CSS
     ================================================== -->
-    <link rel="stylesheet" href="/css/base.css" />
-    <link rel="stylesheet" href="/css/vendor.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="stylesheet" href="../css/vendor.css" />
+    <link rel="stylesheet" href="../css/main.css" />
 
     <!-- script
     ================================================== -->
-    <script src="/js/modernizr.js"></script>
-    <script src="/js/pace.min.js"></script>
+    <script src="../js/modernizr.js"></script>
+    <script src="../js/pace.min.js"></script>
 
     <!-- favicons
     ================================================== -->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="../favicon.ico" type="image/x-icon" />
 
     <!-- Google Analytics
     ================================================== -->
@@ -52,26 +52,21 @@
     ================================================== -->
     <header class="s-header">
       <div class="header-logo">
-<<<<<<< HEAD
-        <a class="site-logo" href="/index.html"
-          ><img src="../images/logo.png" alt="Homepage"
-=======
         <a class="site-logo" href="../index.html"
-          ><img src="/images/logo.png" alt="Homepage"
->>>>>>> ce04ba6e94219a7e44f43f60fb553b4f2c743fbd
+          ><img src="../images/logo.png" alt="Homepage"
         /></a>
       </div>
 
       <nav class="header-nav-wrap">
         <ul class="header-nav">
-          <li><a href="/index.html#home" title="home">Home</a></li>
-          <li><a href="/index.html#about" title="about">About</a></li>
-          <li><a href="/index.html#works" title="works">Works</a></li>
+          <li><a href="../index.html#home" title="home">Home</a></li>
+          <li><a href="../index.html#about" title="about">About</a></li>
+          <li><a href="../index.html#works" title="works">Works</a></li>
           <li>
-            <a href="/index.html#project" title="project">Projects</a>
+            <a href="../index.html#project" title="project">Projects</a>
           </li>
           <li class="current"><a href="blog.html" title="blog">Blog</a></li>
-          <li><a href="/index.html#contact" title="contact">Contact</a></li>
+          <li><a href="../index.html#contact" title="contact">Contact</a></li>
         </ul>
       </nav>
 
@@ -85,7 +80,7 @@
       id="home"
       class="s-home page-hero target-section"
       data-parallax="scroll"
-      data-image-src="/images/DSC8983.jpg"
+      data-image-src="../images/DSC8983.jpg"
       data-natural-width="3000"
       data-natural-height="2000"
       data-position-y="center"
@@ -116,7 +111,7 @@
         <div class="col-full">
           <div class="footer-logo">
             <a class="footer-site-logo" href="#0"
-              ><img src="/images/logo.png" alt="Homepage"
+              ><img src="../images/logo.png" alt="Homepage"
             /></a>
           </div>
 
@@ -166,8 +161,8 @@
 
     <!-- Java Script
     ================================================== -->
-    <script src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
