added AOS Plugin

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- script
     ================================================== -->
@@ -134,7 +135,7 @@
     ================================================== -->
     <section id="about" class="s-about target-section">
 
-        <div class="row narrow section-intro has-bottom-sep">
+        <div class="row narrow section-intro has-bottom-sep" data-aos="fade-up" >
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
@@ -145,19 +146,19 @@
 
         <div class="row about-content">
 
-            <div class="col-six tab-full">
+            <div class="col-six tab-full" data-aos="fade-up" data-aos-duration="1100">
 
                 <img src="images/work-pf.jpg" alt="work-pf">
 
             </div>
 
-            <div class="col-six tab-full">
+            <div class="col-six tab-full" data-aos="fade-up" data-aos-duration="1100">
 
                 <img src="images/christmas-pf.jpeg" alt="christmas-pf">
 
             </div>
 
-            <div class="col-six tab-full left">
+            <div class="col-six tab-full left" data-aos="fade-right" data-aos-duration="1100">
                 <h3>Hi, my name is Jeremy!</h3>
 
                 <p class="basicinfo"><strong>Age:</strong> 20 <br/>
@@ -177,7 +178,7 @@
                 </p>
             </div>
 
-            <div class="col-six tab-full right">
+            <div class="col-six tab-full right" data-aos="fade-left" data-aos-duration="1100" >
                 <h3>Professional Skills</h3>
 
                 <ul class="skill-bars">
@@ -224,7 +225,7 @@
 
 
 
-        <div class="row about-content about-content--timeline">
+        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
 
             <div class="col-six text-left left">
                 <h3>Work Experience</h3>
@@ -262,7 +263,7 @@
         </div> <!-- end about-content timeline -->
 
 
-        <div class="row about-content about-content--timeline">
+        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
 
             <div class="col-six text-left left">
                 <h3>My Education</h3>
@@ -304,7 +305,7 @@
 
 
 
-        <div class="row about-content about-content--timeline">
+        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
 
                 <div class="col-full text-left">
                     <h3>Volunteer Experience</h3>
@@ -400,12 +401,22 @@
     ================================================== -->
     <section id="works" class="s-works target-section">
 
-        <div class="row narrow section-intro has-bottom-sep">
+        <div class="row narrow section-intro has-bottom-sep"  data-aos="fade-up" data-aos-duration="1000">
             <div class="col-full">
                 <h3>Photography Work</h3>
                 <h1>Check out my latest photos</h1>
 
-                <p class="lead2">Whether you are in a family outing, at a birthday party or at an event. There are moments you wish you had a camera and capture the unforgettable. On your event day, I will be there to capture great big giant moments worth remembering forever like the time you first held your son's one-year-old birthday party. I'll be there to capture the little tiny moments like slicing your 21st birthday cake. Your event day is made of big and small moments. For me, it's not about creating the images but capturing the moments that matter to you. Photos that remind you how you felt in that moment. As a photographer, I'll be working side by side with you ensuring that on your event day, you're covered. My goal is to give you the least hassle and allow you to live the moments on your event day. Below are some of my past experiences. Take the time to enjoy and let the pictures do the talking.</p>
+                <p class="lead2">Whether you are in a family outing, at a birthday party or at an event.
+                    There are moments you wish you had a camera and capture the unforgettable.
+                    On your event day, I will be there to capture great big giant moments worth remembering forever
+                    like the time you first held your son's one-year-old birthday party.
+                    I'll be there to capture the little tiny moments like slicing your 21st birthday cake.
+                    Your event day is made of big and small moments.
+                    For me, it's not about creating the images but capturing the moments that matter to you.
+                    Photos that remind you how you felt in that moment.
+                    As a photographer, I'll be working side by side with you ensuring that on your event day, you're covered.
+                    My goal is to give you the least hassle and allow you to live the moments on your event day.
+                    Below are some of my past experiences. Take the time to enjoy and let the pictures do the talking.</p>
             </div>
         </div>
 
@@ -460,7 +471,7 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Street Photography for Christian & Samantha after their basking session. Taken in Penang, Malaysia</p>
+                            <p>Street Photography for Christian & Samantha after their basking session. Taken in Penang, Malaysia.</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -676,7 +687,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>A series of photography shots of different people from Singapore Polytechnic</p>
+                            <p>A series of photography shots of different people from Singapore Polytechnic as a personal project/collection.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -702,9 +713,12 @@
                             </p>
                         </div>
 
+                        <span class="item-folio__caption">
+                            <p>A themed birthday party and I was the photographer in charge</p>
+                        </span>
+
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
-
 
             </div>
 
@@ -715,7 +729,7 @@
     ================================================== -->
     <section id="project" class="s-works target-section">
 
-        <div class="row narrow section-intro has-bottom-sep">
+        <div class="row narrow section-intro has-bottom-sep"   data-aos="fade-up" data-aos-duration="1000">
             <div class="col-full">
                 <h3>Projects</h3>
                 <h1>See my latest projects.</h1>
@@ -891,22 +905,19 @@
                                     Shopback
                                 </h3>
                                 <p class="item-folio__cat">
-                                   Design User Interaction
+                                   Design for User Interaction
                                 </p>
                             </div>
 
                             <span class="item-folio__caption">
                                 <p>
-                                    Designed a data warehouse (snowflake schema) that answers various business question regarding sales. Applied ETL Process and transformed it into meaningful data shown here.
-                                    <a target="_Blank" href="https://public.tableau.com/profile/jeremy.c7065#!/vizhome/CA2V3/SalesAnaylsisStory">Tableau Sales Analysis</a>
-
+                                    In this project, my team focuses and applying the design thinking process to provide the best user experience through user research (interviews),
+                                    ideation, multiple prototypes and usability tests. This project enabled us to learn and understand first hand of the importance of user experience.
                                 </p>
                             </span>
 
                         </div> <!-- end item-folio -->
                     </div> <!-- end masonry__brick -->
-
-
 
             </div>
         </div> <!-- end masonry -->
@@ -918,7 +929,7 @@
     ================================================== -->
     <section id="blog" class="s-blog target-section">
 
-        <div class="row narrow section-intro has-bottom-sep">
+        <div class="row narrow section-intro has-bottom-sep" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-full">
                 <h3>Journal</h3>
                 <h1>When I'm not rushing my projects</h1>
@@ -1223,7 +1234,10 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
     <!-- <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script> -->
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 
 </html>
