remove AOS transition from project and work section

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     ================================================== -->
     <section id="works" class="s-works target-section">
 
-        <div class="row narrow section-intro has-bottom-sep"  data-aos="fade-up" data-aos-duration="1000">
+        <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Photography Work</h3>
                 <h1>Check out my latest photos</h1>
@@ -729,7 +729,7 @@
     ================================================== -->
     <section id="project" class="s-works target-section">
 
-        <div class="row narrow section-intro has-bottom-sep"   data-aos="fade-up" data-aos-duration="1000">
+        <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Projects</h3>
                 <h1>See my latest projects.</h1>
