testing masonry loading by placing in index instead of main.js

--- a/index.html
+++ b/index.html
@@ -48,6 +48,41 @@
     </script>
     <!-- End Google Analytics -->
 
+    <script>
+         /* Masonry
+   * ---------------------------------------------------- */
+  var ssMasonryFolio = function() {
+    // jQuery(document).ready(function($) {
+    //   var $container = $(".masonry").masonry({
+    //     columnWidth: 1
+    //   });
+    //   $container.imagesLoaded(function() {
+    //     $container.masonry();
+    //   });
+    // });
+
+    // var containerBricks = $(".masonry");
+
+    // containerBricks.imagesLoaded(function() {
+    //   containerBricks.masonry({
+    //     itemSelector: ".masonry__brick",
+    //     resize: true
+    //   });
+    // });
+
+    var $grid = $(".masonry");
+    $grid.imagesLoaded().progress(function() {
+      // init Masonry after all images have loaded
+      $grid.masonry({
+        itemSelector: ".masonry__brick",
+        resize: true
+      });
+    });
+  };
+
+  ssMasonryFolio();
+    </script>    
+
 </head>
 
 <body id="top">
@@ -720,7 +755,7 @@
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
-            </div>
+        </div>
 
     </section> <!-- end works -->
 
