Search Engine Optimization(metatags), Deleted AOS (issue), added meaningful comments

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Jeremy Chan</title>
-    <meta name="description" content="Portfolio">
-    <meta name="author" content="Jeremy Chan">
+    <title>Jeremy Chan Tse Ee</title>
+    <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
+    <meta name="description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
+    <meta name="author" content="Jeremy Chan Tse Ee">
+    <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
+    <meta property="og:title" content="Jeremy Chan Tse Ee" />
+    <meta property="og:description" content="Freelance Photographer, Student, Coder, Tuition Teacher and Information Technology Student from Singapore Polytechnic" />
+    <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
+    <meta property="og:url" content="https://jeremychan.co">
+    <meta property="og:type" content="website" />
 
     <!-- mobile specific metas
     ================================================== -->
@@ -23,7 +30,6 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- script
     ================================================== -->
@@ -54,10 +60,10 @@
 
     <!-- header
     ================================================== -->
-    <header class="s-header">
+    <header class="s-header" style="overflow-x: hidden;">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Jeremy Chan Hero Image"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -78,7 +84,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" style="overflow-x: hidden;" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
@@ -135,7 +141,7 @@
     ================================================== -->
     <section id="about" class="s-about target-section">
 
-        <div class="row narrow section-intro has-bottom-sep" data-aos="fade-up" >
+        <div class="row narrow section-intro has-bottom-sep" >
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
@@ -146,19 +152,19 @@
 
         <div class="row about-content">
 
-            <div class="col-six tab-full" data-aos="fade-up" data-aos-duration="1100">
+            <div class="col-six tab-full">
 
                 <img src="images/work-pf.jpg" alt="work-pf">
 
             </div>
 
-            <div class="col-six tab-full" data-aos="fade-up" data-aos-duration="1100">
+            <div class="col-six tab-full">
 
                 <img src="images/christmas-pf.jpeg" alt="christmas-pf">
 
             </div>
 
-            <div class="col-six tab-full left" data-aos="fade-right" data-aos-duration="1100">
+            <div class="col-six tab-full left">
                 <h3>Hi, my name is Jeremy!</h3>
 
                 <p class="basicinfo"><strong>Age:</strong> 20 <br/>
@@ -178,7 +184,7 @@
                 </p>
             </div>
 
-            <div class="col-six tab-full right" data-aos="fade-left" data-aos-duration="1100" >
+            <div class="col-six tab-full right">
                 <h3>Professional Skills</h3>
 
                 <ul class="skill-bars">
@@ -225,7 +231,7 @@
 
 
 
-        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row about-content about-content--timeline">
 
             <div class="col-six text-left left">
                 <h3>Work Experience</h3>
@@ -263,7 +269,7 @@
         </div> <!-- end about-content timeline -->
 
 
-        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row about-content about-content--timeline">
 
             <div class="col-six text-left left">
                 <h3>My Education</h3>
@@ -305,7 +311,7 @@
 
 
 
-        <div class="row about-content about-content--timeline" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row about-content about-content--timeline">
 
                 <div class="col-full text-left">
                     <h3>Volunteer Experience</h3>
@@ -429,7 +435,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-gwen.jpg" class="thumb-link" title="Gwen's 1st" data-size="1050x700">
                                 <img src="images/portfolio/gallery/g-gwen.jpg"
-                                     srcset="images/portfolio/gallery/g-gwen.jpg 1x, images/portfolio/gallery/g-gwen.jpg 2x" alt="Gwens1st">
+                                     srcset="images/portfolio/gallery/g-gwen.jpg 1x, images/portfolio/gallery/g-gwen.jpg 2x" alt="Gwens1st Birthday">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -483,7 +489,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/g-qingyi.jpg" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/gallery/g-qingyi.jpg"
-                                     srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x" alt="Qing Yi BDay">
+                                     srcset="images/portfolio/gallery/g-qingyi.jpg 1x, images/portfolio/gallery/g-qingyi.jpg 2x" alt="Qing Yi Birthday">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -749,7 +755,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/projects/p-ValitPoster.jpg" class="thumb-link" title="Valit Poster" data-size="7000x9900">
                                 <img src="images/portfolio/projects/p-ValitPoster.jpg"
-                                     srcset="images/portfolio/projects/p-ValitPoster.jpg 1x, images/portfolio/projects/p-ValitPoster.jpg 2x" alt="Valit">
+                                     srcset="images/portfolio/projects/p-ValitPoster.jpg 1x, images/portfolio/projects/p-ValitPoster.jpg 2x" alt="Valit Project">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -929,7 +935,7 @@
     ================================================== -->
     <section id="blog" class="s-blog target-section">
 
-        <div class="row narrow section-intro has-bottom-sep" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
                 <h3>Journal</h3>
                 <h1>When I'm not rushing my projects</h1>
@@ -1130,7 +1136,7 @@
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p>jeremychantseee@gmail.com
+                <p href="mailto:jeremychantseee@gmail.com">jeremychantseee@gmail.com
                 </p>
             </div>
 
@@ -1232,12 +1238,8 @@
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
     <!-- <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script> -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-      </script>
 </body>
 
 </html>
