--- a/404.html
+++ b/404.html
@@ -10,8 +10,14 @@
     ================================================== -->
     <meta charset="utf-8" />
     <title>Jeremy Chan</title>
-    <meta name="description" content="Portfolio" />
-    <meta name="author" content="Jeremy Chan" />
+    <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
+    <meta name="description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
+    <meta name="author" content="Jeremy Chan Tse Ee">
+    <meta property=og:title content="Jeremy Chan Tse Ee" />
+    <meta property=og:description content="Freelance Photographer, Student, Coder, Tuition Teacher and Information Technology Student from Singapore Polytechnic" />
+    <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
+    <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
+    <meta property="og:url" content="https://jeremychan.co">
 
     <!-- mobile specific metas
     ================================================== -->
