--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- header
     ================================================== -->
-    <header class="s-header" style="overflow-x: hidden;">
+    <header class="s-header">
 
         <div class="header-logo">
             <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Jeremy Chan Hero Image"></a>
@@ -83,7 +83,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" style="overflow-x: hidden;" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+   <section id="home" class="s-home page-hero target-section" data-parallax="scroll" data-image-src="images/hero-bg.jpg" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="overlay"></div>
         <div class="shadow-overlay"></div>
