--- a/index.html
+++ b/index.html
@@ -1236,7 +1236,7 @@
     ================================================== -->
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
     <!-- <script src="https://www.retainable.io/assets/retainable/rss-embed/retainable-rss-embed.js"></script> -->
 </body>
 
