changed blog dates and added blog content

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
                 <h1>See my latest projects.</h1>
 
                 <p class="lead">
-                    Over the past three years, I picked up programming, data analytics and design. With all this new knowledge, I implemented and coded a number of projects. Check them out below.
+                    Over the past three years, I picked up programming, data analytics and design. With this new learning skill, I implemented and coded a number of projects. Check them out below.
                 </p>
             </div>
         </div>
@@ -769,7 +769,8 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Valit, a blockchain application built using Ethereum Network, Solidity, ReactJS, HTML5 and CSS3. Valit is proof-of-concept for ticket validation via blockchain. Check it out
+                            <p>Valit, a blockchain application built using Ethereum Network, Solidity, ReactJS, HTML5 and CSS3. Valit is proof-of-concept for ticket validation via blockchain. 
+                                My team's final year project which won us the first place in the PolyFinTech100 API Hackathon Blockchain Category. Check it out here.
                                 <a target="_Blank" rel="noopener" href="https://valit-client.surge.sh/">Valit Website</a>
                             </p>
                         </div>
@@ -826,7 +827,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Built a tour booking app and integrated into a database. The tour details and booking transactions are stored and retrieved from a database.</p>
+                            <p>Built a tour booking app and integrated into a database using C# code and Microsoft SQL to store all the required data. The tour details and booking transactions are stored and retrieved from a database.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -1007,10 +1008,10 @@
                     <article class="col-block">
 
                         <div class="blog-date">
-                            <a href="./blog/blog-single.html">Dec 7, 2018</a>
+                            <a href="./blog/year-in-review.html">Dec 7, 2018</a>
                         </div>
 
-                        <h2 class="h01"><a href="./blog/blog-single.html">A Year in Review</a></h2>
+                        <h2 class="h01"><a href="./blog/year-in-review.html">A Year in Review</a></h2>
                         <p>
                             As the year comes to an end, and another new year comes forward. Some are happy, some are glad as the year comes to an end. But, I would like to be grateful for all the things that has happened in this year. Looking back at all the memories and new friends I make throughout this year, God has been...
                         </p>
