--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <h5>Digital Technology Intern</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a client. Primarily focusing on web analytics, content population and back-end coding.</p>
+                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a client. Primarily focusing on web analytics, content population and ba mixture of front-end/back-end coding.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -258,7 +258,7 @@
                             <h3>Freelance Photographer</h3>
                         </div>
                         <div class="timeline__desc">
-                            <p>As a freelance photographer, my primary focus is on events photography. Event Photographer for key public and private events such as birthday parties, baby shower or community events.</p>
+                            <p>As a freelance photographer, my primary focus is on event photography. Event Photographer for key public and private events such as birthday parties, baby shower or community events.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -285,7 +285,7 @@
                             <h5>Diploma Student</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>	Three year Diploma Program with the School of Computing. Currently pursuing my Diploma in Information Technology specialising in Solutions Development with a current cumulative GPA of 3.93 out of 4.0 and holder of three awards at the moment of this writing.  Expected graduation from the School of Computing in May 2020.
+                            <p>A three year Diploma Program with the School of Computing. Currently pursuing my Diploma in Information Technology specialising in Solutions Development with a current cumulative GPA of 3.93 out of 4.0 and holder of three awards at the moment of this writing.  Expected graduation from the School of Computing in May 2020.
                             </p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -298,7 +298,9 @@
                             <h5>High School Student</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Graduated as the Head Prefect of 2016 and achieved 8A's and 1B+ for my Sijil Pelajaran Malaysia (SPM)/ O Levels Education. In my 5 years of studies, I managed to grab two awards, among them are Best Project Award from First Lego League Malaysia 2015 (FLL) and won the public speaking competition of the northern district of Penang.
+                            <p>Graduated as the Head Prefect of 2016 and achieved 8A's and 1B+ for my Sijil Pelajaran Malaysia (SPM)/ O Levels Education. In my 5 years of studies, I achieved two major awards, among them:-
+                                <br/>• Best Project Award from First Lego League Malaysia 2015 (FLL)
+                                <br/>• Winner of the Northern District Public Speaking Competition for Penang, Malaysia.
                             </p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -769,8 +771,8 @@
                         </div>
 
                         <div class="item-folio__caption">
-                            <p>Valit, a blockchain application built using Ethereum Network, Solidity, ReactJS, HTML5 and CSS3. Valit is proof-of-concept for ticket validation via blockchain. 
-                                My team's final year project which won us the first place in the PolyFinTech100 API Hackathon Blockchain Category. Check it out here.
+                            <p>Valit, a blockchain application built using Ethereum Network, Solidity, ReactJS, HTML5 and CSS3. Valit is a proof-of-concept for ticket validation via blockchain.
+                                My team's final year project enabled us to secure first place in the PolyFinTech100 API Hackathon Blockchain Category. Check it out here.
                                 <a target="_Blank" rel="noopener" href="https://valit-client.surge.sh/">Valit Website</a>
                             </p>
                         </div>
@@ -800,7 +802,10 @@
 
                         <div class="item-folio__caption">
                             <p>Let's Journey Together <br>
-                                A social innovation project as part of my diploma course that my team and I focuses on the importance of addressing depression.</p>
+                                A social innovation project that addresses depression and how we as a community can overcome it.
+                                We designed a campaign concept that addresses depression through an interactive and friendly approach that can be implemented by organisations/governments.
+                                <a target="_Blank" rel="noopener" href="https://www.slideshare.net/secret/BqdCyFvs5bMkWr">Presentation Slides</a>
+                            </p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -827,7 +832,7 @@
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Built a tour booking app and integrated into a database using C# code and Microsoft SQL to store all the required data. The tour details and booking transactions are stored and retrieved from a database.</p>
+                            <p>Built a tour booking app and integrated into a database using C# code. The tour details and booking transactions are stored and retrieved from a database (Microsoft SQL).</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -885,7 +890,7 @@
 
                             <span class="item-folio__caption">
                                 <p>
-                                    Designed a data warehouse (snowflake schema) that answers various business question regarding sales. Applied ETL Process and transformed it into meaningful data shown here.
+                                    Designed a data warehouse (snowflake schema) that answers various business question regarding sales. Applied the ETL process and transformed it into meaningful data shown here.
                                     <a target="_Blank" rel="noopener" href="https://public.tableau.com/profile/jeremy.c7065#!/vizhome/CA2V3/SalesAnaylsisStory">Tableau Sales Analysis</a>
 
                                 </p>
@@ -917,8 +922,8 @@
 
                             <span class="item-folio__caption">
                                 <p>
-                                    In this project, my team focuses and applying the design thinking process to provide the best user experience through user research (interviews),
-                                    ideation, multiple prototypes and usability tests. This project enabled us to learn and understand first hand of the importance of user experience.
+                                    In this project, my team focuses and applyed the design thinking process to provide the best user experience through user research (interviews),
+                                    ideation, multiple prototypes and usability tests. This project enabled us to learn and understand first hand of the importance of user experience (UX).
                                 </p>
                             </span>
 
