added sitemap, change & added link, .htaccess

--- a/index.html
+++ b/index.html
@@ -385,7 +385,8 @@
                                 <h5>Methodist Boys' School Penang Malaysia</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>&#8226; Won a public speaking competition <br/>
+                                <p>
+                                &#8226; Won a public speaking competition <br/>
                                 &#8226; Lead and assisted the daily assembly for the school of 600 students <br/>
                                 &#8226; Lead the Board of Prefects to maintain and uphold the school discipline<br/>
                                 &#8226; Conducted public speeches at numerous school events<br/>
@@ -1135,11 +1136,11 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Mobile: (+65) 9261 9862<br>
+                <p>Mobile:<a href="tel:+6592719862">(+65) 9261 9862</a><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
-                <p href="mailto:jeremychantseee@gmail.com">jeremychantseee@gmail.com
+                <p><a href="mailto:me@jeremychan.co">me@jeremychan.co</a>
                 </p>
             </div>
 
