grammer checked index.html, digitalminimalism.html; tried adding masonry in a year-in-review.html

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <h5>Digital Technology Intern</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a client. Primarily focusing on web analytics, content population and ba mixture of front-end/back-end coding.</p>
+                            <p>As a Digital Technology Intern, I work and help on the Lexus International Brand as a client. Primarily focusing on content population, quality-check and a mixture of front-end/back-end coding.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -298,7 +298,7 @@
                             <h5>High School Student</h5>
                         </div>
                         <div class="timeline__desc">
-                            <p>Graduated as the Head Prefect of 2016 and achieved 8A's and 1B+ for my Sijil Pelajaran Malaysia (SPM)/ O Levels Education. In my 5 years of studies, I achieved two major awards, among them:-
+                            <p>Graduated as the Head Prefect of 2016 and achieved 8A's and 1B+ for my Sijil Pelajaran Malaysia (SPM)/ O Levels Education. In my 5 years of studies, I achieved two major awards, among them :
                                 <br/>• Best Project Award from First Lego League Malaysia 2015 (FLL)
                                 <br/>• Winner of the Northern District Public Speaking Competition for Penang, Malaysia.
                             </p>
@@ -743,7 +743,8 @@
                 <h1>See my latest projects.</h1>
 
                 <p class="lead">
-                    Over the past three years, I picked up programming, data analytics and design. With this new learning skill, I implemented and coded a number of projects. Check them out below.
+                    Over the past three years, I picked up numerous programming languages, design thinking skills and created a few business ideas.
+                    With all of these new learning skills, I implemented, coded and designed several projects. Check them out below.
                 </p>
             </div>
         </div>
@@ -984,7 +985,7 @@
 
                         <h2 class="h01"><a href="./blog/digital-minimalism.html">Digital Minimalism</a></h2>
                         <p>
-                            Social media is great and all but I came to realisation that social media is starting to "own" us. Stealing our time and productivity everyday. Are you aware of how much technology has affected us all? Ask yourself, how much time did you spend on your phone the past week when all that time, could have been...
+                            Social media is great and all but I realised that social media is starting to "own" us. Stealing our time and productivity everyday. Are you aware of how much technology has affected us all? Ask yourself, how much time did you spend on your phone the past week when all that time, could have been...
                         </p>
 
                         <div class="blog-cat">
@@ -1136,7 +1137,9 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Mobile:<a href="tel:+6592719862">(+65) 9261 9862</a><br>
+                <p>Mobile: <br/>
+                    <a href="tel:+6592719862">(+65) 9261 9862</a><br>
+                    <a href="tel:+601126692829">(+60) 11 2669 2829</a><br>
                 </p>
 
                 <h4 class="h06">Email</h4>
