added in complete OG Metatags, titles and desscription

--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Jeremy Chan</title>
+    <title>Jeremy Chan Tse Ee</title>
     <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
-    <meta name="description" content="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
+    <meta name="description" contegnt="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
     <meta name="author" content="Jeremy Chan Tse Ee">
     <meta property=og:title content="Jeremy Chan Tse Ee" />
     <meta property=og:description content="Freelance Photographer, Student, Coder, Tuition Teacher and Information Technology Student from Singapore Polytechnic" />
