redid thumbnail upload

--- a/404.html
+++ b/404.html
@@ -13,11 +13,25 @@
     <meta name="keywords"  content="photography,portfolio,singapore,singaporepolytechnic,jeremychan,chantseee,jeremy,chan,tse,ee,tseee,ctecreatives,tzeee,tze, cteadeventure, jeremy chan co, coder, IT" />
     <meta name="description" contegnt="Freelance Photographer and Information Technology Student from Singapore Polytechnic">
     <meta name="author" content="Jeremy Chan Tse Ee">
+    <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
     <meta property=og:title content="Jeremy Chan Tse Ee" />
     <meta property=og:description content="Freelance Photographer, Student, Coder, Tuition Teacher and Information Technology Student from Singapore Polytechnic" />
     <meta property="og:title" content="Jeremy Chan Tse Ee Portfolio">
-    <meta name="application-name" content="Jeremy Chan Tse Ee Portfolio">
     <meta property="og:url" content="https://jeremychan.co">
+    <!-- Thumbnail 1900 * 930 -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_1000.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_1000.jpg" />
+    <meta property="og:image:height" content="1900" />
+    <!-- Thumbnail 600 * 300 -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_600-300.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_600-300.jpg" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="295" />
+    <!-- Thumbnail Square -->
+    <meta property="og:image" content="http://jeremychan.co/images/thumbnail_square-80.jpg">
+    <meta property="og:image:secure_url" content="https://jeremychan.co/images/thumbnail_square-80.jpg" />
+    <meta property="og:image:width" content="80" />
+    <meta property="og:image:height" content="105" />
 
     <!-- mobile specific metas
     ================================================== -->
@@ -116,7 +130,7 @@
       <div class="row">
         <div class="col-full">
           <div class="footer-logo">
-            <a class="footer-site-logo" href="#0"
+            <a class="footer-site-logo" href="https://jeremychan.co"
               ><img src="../images/logo.png" alt="Homepage"
             /></a>
           </div>
@@ -125,19 +139,16 @@
             <li>
               <a href="http://www.linkedin.com/in/jeremycte">
                 <i class="im im-linkedin" aria-hidden="true"></i>
-                <span>LinkedIn</span>
               </a>
             </li>
             <li>
               <a href="http://www.facebook.com/jeremycte23">
                 <i class="im im-facebook" aria-hidden="true"></i>
-                <span>Facebook</span>
               </a>
             </li>
             <li>
               <a href="http://instagram.com/ctecreatives">
                 <i class="im im-instagram" aria-hidden="true"></i>
-                <span>Instagram</span>
               </a>
             </li>
           </ul>
